--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -1,49 +1,10 @@
-<p class="text-success">
-  <%= notice %>
-</p>
+<%= render 'shared/alerts' %>
 
-<% content_for :title, "Veículos" %>
+ <% content_for :title, "Veículos" %>
 
-  <h1>Veículos</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+  <h1 class="mb-0">Veículos</h1>
+  <%= link_to "Novo Veículo" , new_veiculo_path, class: "btn btn-primary" %>
+</div>
 
-  <div class="mb-3">
-    <%= link_to "Novo Veículo" , new_veiculo_path, class: "btn btn-primary" %>
-  </div>
-
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered">
-      <thead class="table-dark">
-        <tr>
-          <th>ID</th>
-          <th>Placa</th>
-          <th>Modelo</th>
-          <th>Cliente</th>
-          <th class="text-center">Ações</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @veiculos.each do |veiculo| %>
-          <tr>
-            <td>
-              <%= veiculo.id %>
-            </td>
-            <td>
-              <%= veiculo.placa %>
-            </td>
-            <td>
-              <%= veiculo.modelo %>
-            </td>
-            <td>
-              <%= veiculo.cliente.nome if veiculo.cliente %>
-            </td>
-            <td class="text-center">
-              <%= link_to "Editar" , edit_veiculo_path(veiculo), class: "btn btn-sm btn-warning me-1" %>
-
-              <%= button_to "Apagar" , veiculo_path(veiculo), method: :delete, data: { confirm: "Tem certeza?" },
-                  class: "btn btn-sm btn-danger" %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+<%= render 'veiculos/table' , veiculos: @veiculos %>
