--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,9 @@
           <%= link_to "Adicionar Veículo" , new_veiculo_path,
             class: "btn btn-outline-light nav-btn" %>
         </li>
-
+        <li class="nav-item me-2">
+          <%= link_to "Movimentação" , movimentos_path, class: "btn btn-outline-light nav-btn" %>
+        </li>
       </ul>
     </div>
   </div>
