Ajustei para na listagem mostrar a data de entrada automática ao lançar a placa do veículo.

--- a/app/views/movimentos/_movimento.html.erb
+++ b/app/views/movimentos/_movimento.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id movimento %>">
   <p>
     <strong>Entrada:</strong>
-    <%= @movimento.entrada %>
+    <%= movimento.entrada %>
   </p>
 
   <p>
